MIT-998: fix sponsored logos being blurry

--- a/components/sponsoredModule/sponsoredModule.css
+++ b/components/sponsoredModule/sponsoredModule.css
@@ -29,8 +29,7 @@
 
 .logo {
   display: block;
-  height: rem(50);
-  width: rem(50);
+  max-width: rem(200);
 
   > * {
     height: 100%;
